--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "password-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://antran1245.github.io/password-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
